[package]
name = "bt-rngd"
version = "0.1.0"
authors = ["bunnie <bunnie@kosagi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wishbone-bridge = { path = "wishbone-utils/wishbone-tool/crates/bridge" }

# Support reading csr.csv
csv = "1.1"
indicatif = "0.15.0"
# support readout of csr.csv from flash
sha2 = "0.9"
log = "0"
